<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cliente.Perfil">

    <ImageView
        android:id="@+id/imageViewPerfil"
        android:layout_width="172dp"
        android:layout_height="157dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/perfil"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textNombrePerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/nombre"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPerfil" />

    <TextView
        android:id="@+id/textCelularPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/numero_celular"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textMontoTotalPerfil"
        app:layout_constraintTop_toBottomOf="@+id/textMontoTotalPerfil" />

    <TextView
        android:id="@+id/textDIreccionPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/direccion"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textCelularPerfil"
        app:layout_constraintTop_toBottomOf="@+id/textCelularPerfil" />

    <TextView
        android:id="@+id/textMontoTotalPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/monto_total"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textNombrePerfil"
        app:layout_constraintTop_toBottomOf="@+id/textNombrePerfil" />

</androidx.constraintlayout.widget.ConstraintLayout>