<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vendedor.PantallaRegistrarPagos">

    <TextView
        android:id="@+id/textRPmontoDeuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/textview"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textDeudaPendienteSaldada"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/textDeudaPendienteSaldada"
        app:layout_constraintTop_toBottomOf="@+id/textDeudaPendienteSaldada" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPantallaRegistrarPagos"
        android:layout_width="361dp"
        android:layout_height="286dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPRPProductosHistorial" />

    <Button
        android:id="@+id/btnDisminuirDeuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:onClick="disminuirDeuda"
        android:text="@string/realizar_pago"
        app:layout_constraintEnd_toEndOf="@+id/rvPantallaRegistrarPagos"
        app:layout_constraintTop_toBottomOf="@+id/textRPmontoDeuda" />

    <TextView
        android:id="@+id/textDeudaPendienteSaldada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/deuda_pendiente"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPRPProductosHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lista_de_productos"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDisminuirDeuda" />

    <Button
        android:id="@+id/btnPRPVerHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="verHistorialPagos"
        android:text="@string/historial_de_pagos"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rvPantallaRegistrarPagos"
        app:layout_constraintTop_toBottomOf="@+id/rvPantallaRegistrarPagos" />

    <Button
        android:id="@+id/btnPRPVerListaProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="verListaProductos"
        android:text="@string/lista_de_producto"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btnPRPVerHistorial"
        app:layout_constraintStart_toStartOf="@+id/rvPantallaRegistrarPagos"
        app:layout_constraintTop_toTopOf="@+id/btnPRPVerHistorial"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>